Removed old comment at top

--- a/content/chapter3-results.tex
+++ b/content/chapter3-results.tex
@@ -1,13 +1,5 @@
 %
-%  This is an example of how a LaTeX thesis should be formatted.  This
-%  document contains chapter 2 of the thesis.
-%
-%  Time-stamp: "[sample-chapter2.tex] last modified by Scott Budge (scott) on 2016-07-28 (Thursday, 28 July 2016) at 08:40:50 on goga.ece.usu.edu"
-%
-%  Info: $Id: sample-chapter2.tex 967 2016-07-28 15:33:29Z scott $   USU
-%  Revision: $Rev: 967 $
-% $LastChangedDate: 2016-07-28 09:33:29 -0600 (Thu, 28 Jul 2016) $
-% $LastChangedBy: scott $
+%  This document contains chapter 3 of the thesis.
 %
 
 \chapter{RESULTS}\label{ch:results}
