--- a/content/chapter3-results.tex
+++ b/content/chapter3-results.tex
@@ -9,10 +9,9 @@ Each section is dedicated to exploring one question.
 The process used is described in each section though the process usually
 consists of using a combination of graphing, One-way ANOVA tests, and
 Student's t- or Mann-Whitney U-tests.
+All tests are performed with $\alpha = 0.05$ unless otherwise stated.
 
-% TODO: Does "Best Overall" sound good, or does ". . . Analysis" sound
-% better? Or should I use something else entirely? Optimal? Lowest Error?
-\section{Lowest Error Voting Mechanisms}\label{sec:best-overall-voting-mechanism}
+\section{Lowest Error Voting Mechanisms}\label{sec:lowest-error-voting-mechanism}
 Voting mechanisms consolidate the votes of all agents along with their weights
 into a final estimate, and so play a pivotal role in the accuracy of a system.
 \autoref{fig:voting_mechanisms_comparison} illustrates the population of
@@ -40,11 +39,21 @@ Indeed, if the estimates are instead graphed as in
 is more normal than uniform.
 This means most mechanisms are better at estimating \truth\ than random chance.
 
-% Best Average mechanism
-% Best Candidate mechanism
+Additionally, while all distributions appear generally close, there appears to be a
+slight difference between average and candidate mechanisms.
+This can be confirmed by comparing the average mechanisms to the candidate mechanisms
+using a Mann-Whitney U-test, with the alternative being the average mechanisms'
+squared error is lesser.
+Performing such a test results in a p-value of 0.0, far below the $\alpha$ of 0.05.
+Since candidate mechanisms can still be useful depending on the situation, both the
+best average mechanisms and the best candidate mechanisms will be identified.
 
-\section{Best Overall Weighting Mechanism}\label{sec:best-overall-weighting
--mechanism}
+\subsection{Average Mechanisms}\label{subsec:lowest-error-average-mechanisms}
+
+\subsection{Candidate Mechanisms}\label{subsec:lowest-error-candidate-mechanisms}
+
+
+\section{Best Overall Weighting Mechanism}\label{sec:best-overall-weighting-mechanism}
 
 
 \section{Best Overall Combination}\label{sec:best-overall-combination}
