Added appendix section about voting mechanism p-values

--- a/content/chapter3-results.tex
+++ b/content/chapter3-results.tex
@@ -48,6 +48,13 @@ Performing such a test results in a p-value of 0.0, far below the $\alpha$ of 0.
 Since candidate mechanisms can still be useful depending on the situation, both the
 best average mechanisms and the best candidate mechanisms will be identified.
 
+Further U-tests were performed, comparing each individual voting mechanism against
+every other individual mechanism.
+The results of this analysis can be found in
+\autoref{fig:all-voting-mechanisms-p-values}, and is further segmented and discussed in
+\autoref{subsec:lowest-error-average-mechanisms} and
+\autoref{subsec:lowest-error-candidate-mechanisms}.
+
 \subsection{Average Mechanisms}\label{subsec:lowest-error-average-mechanisms}
 
 \subsection{Candidate Mechanisms}\label{subsec:lowest-error-candidate-mechanisms}
