Added note for Voting Mechanisms

--- a/content/chapter3-results.tex
+++ b/content/chapter3-results.tex
@@ -40,6 +40,8 @@ Indeed, if the estimates are instead graphed as in
 is more normal than uniform.
 This means most mechanisms are better at estimating \truth\ than random chance.
 
+% TODO: Add a table with the mean error for each mechanism
+
 Additionally, while all distributions appear generally close, there appears to be a
 slight difference between average and candidate mechanisms.
 This can be confirmed by comparing the average mechanisms to the candidate mechanisms
