Changed titles for sections in Chapter 3

--- a/content/chapter3-results.tex
+++ b/content/chapter3-results.tex
@@ -143,10 +143,10 @@ by Plurality, Instant Runoff, and finally Weighted Instant Runoff.
 \end{samepage}
 
 
-\section{Best Overall Weighting Mechanism}\label{sec:best-overall-weighting-mechanism}
+\section{Lowest Error Weighting Mechanisms}\label{sec:lowest-error-overall-weighting-mechanism}
 
 
-\section{Best Overall Combination}\label{sec:best-overall-combination}
+\section{Lowest Error Combination}\label{sec:lowest-error-overall-combination}
 
 
 \section{Best Inactive to Proxy Ratio}\label{sec:best-inactive-to-proxy-count}
