Moved where intermediary figures are generated

--- a/thesis.tex
+++ b/thesis.tex
@@ -88,7 +88,8 @@
 \usepackage{util} % MDH: Contains my custom commands
 \usepackage{notations} % MDH: So I don't have to repeat myself so much
 
-\usepackage[outdir=./content/figures/]{epstopdf} % To control where figures are output
+% To control where figures are output
+\usepackage[outdir=./build/auxil/content/]{epstopdf}
 \pdfminorversion=7 % Because epstopdf outputs as version 1.7
 
 % Set spacing around figures and tables to triple space
