--- a/content/chapter3-results.tex
+++ b/content/chapter3-results.tex
@@ -143,8 +143,7 @@ by Plurality, Instant Runoff, and finally Weighted Instant Runoff.
 \end{samepage}
 
 
-\section{Lowest Error Weighting Mechanisms}\label{
-    sec:lowest-error-overall-weighting-mechanism}
+\section{Lowest Error Weighting Mechanisms}\label{sec:lowest-error-weighting-mechanism}
 Weighting mechanisms have a direct influence on how voting mechanisms operate in that
 they apply weights to the estimates of the proxies.
 This naturally has a direct impact on the output of a system.
@@ -195,12 +194,157 @@ This idea is explored in~\fullref{sec:lowest-error-overall-combination}.
 
 
 \section{Lowest Error Combination}\label{sec:lowest-error-overall-combination}
+While the previous sections have explored the lowest error for each voting mechanism and
+weighting mechanism regardless of the mechanism it's paired with, this section will
+explore the lowest error for each combination of voting and weighting mechanism.
+
+The population of error for each combination is displayed in
+\autoref{fig:combined-comparison}, where we see a similar pattern with the voting
+mechanisms as what was discussed in \autoref{sec:lowest-error-voting-mechanism}: the
+candidate mechanisms tend to be noticeably worse than the average mechanisms.
+Additionally, average mechanisms typically produce an error below the weighting
+mechanism mean, while candidate mechanisms tend to produce an error that is higher
+than the mean.
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[scale=0.75]
+    {./content/figures/combinations/combined_comparison}
+    \caption{Squared error populations by combination of mechanisms. The red dashed
+    line represents the mean for each weighting mechanism, while the black line with
+    dots are the means for each voting mechanism using the weighting mechanism.}
+    \label{fig:combined-comparison}
+\end{figure}
+
+Using U-tests, we can discover which combinations produce the lowest error.
+By counting how many times some combination beats other combinations, we can produce
+an over ranking.
+The number of times one combination `beats' another by having a lower error is
+displayed in \autoref{fig:combined-lesser_counts}, and is further tabulated in
+\autoref{tab:combined-overall-rankings}.
+From these tests, we can see the averaged easily dominate, with the first candidate
+combination being in rank 15, reinforcing the idea that average mechanisms result in
+lower error than candidate mechanisms.
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[scale=0.75]
+    {./content/figures/combinations/combined_lesser_counts}
+    \caption{The number of times each combination has a lower error according to
+    U-tests.}
+    \label{fig:combined-lesser_counts}
+\end{figure}
+
+From the graph, we can see our findings in~\fullref{sec:lowest-error-voting-mechanism}
+hold true with the combinations as well, with Ranked Choice taking the top three ranks.
+The rankings from~\fullref{sec:lowest-error-weighting-mechanism} also
+generally hold true, since the Closest and Borda mechanisms generally
+appear sooner than others.
+It is possible, however, that voting mechanisms have a larger impact than weighting
+mechanisms, since the general order of rankings more closely follows the voting
+mechanism ordering rather than that of the weighting mechanisms.
+
+%% I'm leaving this here in case I want to add it later. For now it seems like overkill
+% Nevertheless, there may be occasions when candidate mechanisms may be preferable
+% over average mechanisms, and so a deeper dive will be performed on both types of
+% voting mechanisms.
+%
+% \subsection{Average Mechanisms}\label{subsec:lowest-error-combo-average}
+%
+% \subsection{Candidate Mechanisms}\label{subsec:lowest-error-combo-candidate}
+
+
+\begin{table}[htbp]
+    % increase table row spacing, adjust to taste
+    \renewcommand{\arraystretch}{1.0}
+
+    \caption{The rankings of combinations, ordered by the number of combinations
+    beaten.
+    The maximum number of combinations is 31 (32 total combinations, minus
+    the combination itself).
+    Note that those with the same count are arranged in no particular order.}
+    \label{tab:combined-overall-rankings}
+
+    \centering
+    \begin{tabular}{|c|c|c|}
+        \hline
+        Voting Mechanism                 & Weighting Mechanism & \# of Combos Beaten \\
+        \hhline{|=|=|=|}
+        Ranked Choice                    & Distance Voting     & 28                  \\
+        \hline
+        Ranked Choice                    & Closest             & 28                  \\
+        \hline
+        Ranked Choice                    & Borda               & 28                  \\
+        \hline
+        Mean                             & Closest             & 28                  \\
+        \hline
+        Mean                             & Distance Voting     & 27                  \\
+        \hline
+        Mean                             & Equal Weight        & 25                  \\
+        \hline
+        Ranked Choice                    & Equal Weight        & 24                  \\
+        \hline
+        Weight by Instant Runoff         & Borda               & 19                  \\
+        \hline
+        Averaged Weighted Instant Runoff & Borda               & 19                  \\
+        \hline
+        Weight by Instant Runoff         & Closest             & 19                  \\
+        \hline
+        Averaged Weighted Instant Runoff & Closest             & 19                  \\
+        \hline
+        Mean                             & Borda               & 19                  \\
+        \hline
+        Weight by Instant Runoff         & Distance Voting     & 19                  \\
+        \hline
+        Averaged Weighted Instant Runoff & Distance Voting     & 18                  \\
+        \hline
+        Plurality                        & Distance Voting     & 17                  \\
+        \hline
+        Median                           & Closest             & 16                  \\
+        \hline
+        Median                           & Distance Voting     & 15                  \\
+        \hline
+        Plurality                        & Borda               & 14                  \\
+        \hline
+        Weighted Instant Runoff          & Borda               & 8                   \\
+        \hline
+        Instant Runoff (Candidate)       & Distance Voting     & 8                   \\
+        \hline
+        Instant Runoff (Candidate)       & Closest             & 8                   \\
+        \hline
+        Instant Runoff (Candidate)       & Borda               & 8                   \\
+        \hline
+        Weighted Instant Runoff          & Closest             & 8                   \\
+        \hline
+        Median                           & Borda               & 8                   \\
+        \hline
+        Plurality                        & Closest             & 7                   \\
+        \hline
+        Median                           & Equal Weight        & 6                   \\
+        \hline
+        Averaged Weighted Instant Runoff & Equal Weight        & 4                   \\
+        \hline
+        Weight by Instant Runoff         & Equal Weight        & 4                   \\
+        \hline
+        Weighted Instant Runoff          & Distance Voting     & 3                   \\
+        \hline
+        Instant Runoff (Candidate)       & Equal Weight        & 1                   \\
+        \hline
+        Weighted Instant Runoff          & Equal Weight        & 1                   \\
+        \hline
+        Plurality                        & Equal Weight        & 0                   \\
+        \hline
+    \end{tabular}
+\end{table}
+
+
+\section{Weightlessly Averaging All Agents}\label{sec:weightless-average-all}
+% Explain how WeightlessAverageAll works best
+% TODO: Try to find some cirumstance where some else works better
 
 
 \section{Best Inactive to Proxy Ratio}\label{sec:best-inactive-to-proxy-count}
 
 
-\section{Caveat}\label{sec:caveat}
-% Explain how WeightlessAverageAll works best
-% TODO: Try to find some cirumstance where some else works better
+
 
