--- a/content/endmatter/appendix.tex
+++ b/content/endmatter/appendix.tex
@@ -48,7 +48,7 @@ location. % FIXME
     \begin{tabular}{|c|c|c|}
         \hline
         Distribution      & Notation      & Percent inside Extents \\
-        \hline
+        \hhline{|=|=|=|}
         Uniform           & \uniformdist  & 100\%                  \\
         \hline
         Normal (Gaussian) & \gaussiandist & 99.7\%                 \\
