Wrote some about Weightless

--- a/content/chapter2-experimental-design.tex
+++ b/content/chapter2-experimental-design.tex
@@ -504,11 +504,10 @@ number of questions.
     \item Which combinations of voting mechanism and weighting mechanism
     produces the lowest error?
 
+    \item Do these systems work better than simply averaging all the agents' estimates?
+
     % Ratio is likely important here
     \item How many inactive agents per proxy should be used?
-
-    \item Which combinations of mechanisms provide the best accuracy for the
-    least cost?
 \end{enumerate}
 
 % TODO: Fill me out more
